crates/frontend/tests/snapshots/types__check_failing@cant_infer_empty_array.nemo.snap
---
source: crates/frontend/tests/types.rs
expression: err_buf
input_file: crates/frontend/tests/type_errors/cant_infer_empty_array.nemo
---
[17] Error: Can't infer type of an empty array
   ╭─[source:2:1]
   │
 2 │   let x = []
   │           ─┬  
   │            ╰── Can't infer type of an empty array
───╯
