crates/frontend/tests/snapshots/types__check_failing@invalid_literal.nemo.snap
---
source: crates/frontend/tests/types.rs
expression: err_buf
input_file: crates/frontend/tests/type_errors/invalid_literal.nemo
---
[02] Error: Invalid literal couldn't be parsed
   ╭─[source:1:13]
   │
 1 │ global x = 1000000000000000000000000000000000000000000000000000000000000
   │            ──────────────────────────────┬──────────────────────────────  
   │                                          ╰──────────────────────────────── Invalid literal couldn't be parsed
───╯
