crates/frontend/tests/snapshots/types__check_failing@missing_field.nemo.snap
---
source: crates/frontend/tests/types.rs
expression: err_buf
input_file: crates/frontend/tests/type_errors/missing_field.nemo
---
[14] Error: Missing field. F.x was not provided
   ╭─[source:2:2]
   │
 6 │   F { }
   │   ┬  
   │   ╰── Missing field. F.x was not provided
───╯
