crates/frontend/tests/snapshots/types__check_failing@non_array_idx.nemo.snap
---
source: crates/frontend/tests/types.rs
expression: err_buf
input_file: crates/frontend/tests/type_errors/non_array_idx.nemo
---
[09] Error: Tried to index into a non-array type i32
   ╭─[source:2:1]
   │
 2 │   let x = 10[4]
   │           ─┬  
   │            ╰── Tried to index into a non-array type i32
───╯
