crates/frontend/tests/snapshots/types__check_failing@not_a_function.nemo.snap
---
source: crates/frontend/tests/types.rs
expression: err_buf
input_file: crates/frontend/tests/type_errors/not_a_function.nemo
---
[16] Error: Can't a call a value of type i32 as a function
   ╭─[source:2:1]
   │
 3 │   x(0)
   │   ┬  
   │   ╰── Can't a call a value of type i32 as a function
───╯
